# Trigger-project

./: .gitignore  GitFlow.md  README.md  app.py  db.py  docker-compose.yaml  dockerfile  githubactiontestfile  requirements.txt  setup.cfg  speech.txt  test.json  test_unit.py  testdb.py  user.py
.github/workflows/: automation.yml  main.yml
deploy/AWS/terraform/: README.md  main.tf  terraform.tfvars.default  variables.tf
deploy/Azure/terraform/: main.tf  variables.tf
deploy/GCP/terraform/: .gitignore  README.md  main.tf  terraform.tfvars.default  variables.tf
deploy/kubernetes/: README.md  trigger-deployment.yml
deploy/terraform/: .gitignore  README.md  main.tf  terraform.tfvars.default  variables.tf
static/javascript/: jquery.js  popup.js  pud.js
static/style/: general.css  signin.css  starter-template.css
templates/: create_room.html  debats.html  dview_room.html.t  ecologie.html  edit_room.html  geo.htm  index.html  login.html  mode.html  politique.html  signup.html  technologie.html  test.html  travail.html  view_room.html
