[metadata]
name = trigger-chat
version = 2022.05.04a001
author = Trigger Team
description = Trigger est une application permettant de faciliter la rencontre de personnes souhaitant débattre des idées opposées.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vanoud/Trigger-project
project_urls =
    Documentation = https://github.com/vanoud/Trigger-project/wiki
classifiers =
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Development Status :: 3 - Alpha
    Framework :: Flask
    Natural Language :: French
    Operating System :: OS Independent
    Topic :: Communications :: Chat

[options]
package_dir =
    = /
packages = find:
python_requires = >=3.8

[options.packages.find]
where = /
